@@ -2,10 +2,10 @@
  * Theme Name:  gimliii
  * Theme URI:   https://wordpress.org/themes/gimliii
  * Description: Very simple and clean green theme , supports custom header , custom background , comes with two widgets and three footer widget areas , sidebar widgets. 
- * Version:     1.0.8
+ * Version:     1.0.8.1
  * Author:      Bravo Keyl
  * Author URI:  http://cloudspier.com
- * Tags: 		green, one-column, two-columns, three-columns,custom-menu,featured-images , right-sidebar , responsive-layout , custom-background , custom-header , sticky-post ,translation-ready ,editor-style
+ * Tags: 		green, one-column, two-columns, three-columns,custom-menu,featured-images , right-sidebar ,left-sidebar , responsive-layout , custom-background , custom-header , sticky-post ,translation-ready ,editor-style ,full-width-template
  * License:     GNU General Public License v3
  * License URI: http://www.gnu.org/licenses/gpl.html
  * Text Domain: gimliii
@@ -949,8 +949,6 @@ blockquote:hover {
 }
 #navigation {
 	position: relative;
-	float: right;
-	margin: 0 -10px 0 50px;
 	font-size: 12px;
 	font-weight: bold; }
 	
